Fixed radio svg getting clipped in firefox

--- a/packages/react/src/components/form/Radio/Radio.module.css
+++ b/packages/react/src/components/form/Radio/Radio.module.css
@@ -12,6 +12,7 @@
   width: 1.75em;
   z-index: 1;
   margin: auto;
+  overflow: visible;
 }
 
 .label {
